# RDSM

./: .gitignore  CMakeLists.txt  HANDOFF.md  PROJECT_PLAN_STATUS.md  QA.md  QA2_response.md  READING_GUIDE.md  README.md  final_focused_matrix_plan.md  paper.md  paper_zh.md  phase1_final_measure.sh  phase1_parse_results.py  rdma_client_sweep.sh  report.md
docs/: ENVIRONMENT_AND_REPRODUCTION_GUIDE.md  IMPLEMENTATION_GUIDE.md  RDSM_next_agent_prompt.md  RDSM_professor_review.md  RDSM_review_followup_completion.md  RESEARCH_DIRECTION_ANALYSIS.md  RESEARCH_MEMO.md  RESEARCH_ROADMAP_INDEX.md  TEMP_RESPOND.md  preliminary_prototype_and_problem_origin.md
experiments/: phase2_benchmark.h  phase2_dsm_benchmark.cpp
include/: json_utils.h  latency_sampler.h
prev_project/: CMakeLists.txt  README.md
prev_project/docs/: COMPLETION_REPORT.md  ENV.md  FINAL_SUMMARY.md  PROJECT_REPORT.md
prev_project/experiments/: farm_benchmark.cpp  herd_benchmark.cpp  os_analysis.cpp
prev_project/include/: dsm_transaction.h  herd_kv_store.h  memory_manager.h  perf_monitor.h  rdma_wrapper.h
prev_project/src/: dsm_transaction.cpp  herd_kv_store.cpp  memory_manager.cpp  perf_monitor.cpp  rdma_wrapper.cpp
results/: final_audit_bug_report.md  final_project_convergence_summary.md
results/final_focused_matrix/: final_summary.md  phase2_report.md  run_metadata.json  statistical_report.md  summary.csv  summary_by_config.csv
results/final_focused_matrix/001_final_baseline_occ_low_uniform_read95_t1_rep1/: app_metrics.json  manifest.json  os_time.txt
results/final_focused_matrix/002_final_baseline_occ_low_uniform_read95_t1_rep2/: benchmark.stdout.txt  manifest.json  os_time.txt
results/final_focused_matrix/003_final_baseline_occ_low_uniform_read95_t1_rep3/: benchmark.stdout.txt  manifest.json  os_time.txt
results/final_focused_matrix/004_final_baseline_occ_low_uniform_read95_t2_rep1/: app_metrics.json  manifest.json  os_time.txt
results/final_focused_matrix/005_final_baseline_occ_low_uniform_read95_t2_rep2/: benchmark.stdout.txt  manifest.json  os_time.txt
results/final_focused_matrix/006_final_baseline_occ_low_uniform_read95_t2_rep3/: benchmark.stdout.txt  manifest.json  os_time.txt
results/final_focused_matrix/007_final_baseline_occ_low_uniform_read95_t4_rep1/: app_metrics.json  manifest.json  os_time.txt
results/final_focused_matrix/008_final_baseline_occ_low_uniform_read95_t4_rep2/: benchmark.stdout.txt  manifest.json  os_time.txt
results/final_focused_matrix/009_final_baseline_occ_low_uniform_read95_t4_rep3/: benchmark.stdout.txt  manifest.json  os_time.txt
results/final_focused_matrix/010_final_backoff_occ_low_uniform_read95_t1_rep1/: benchmark.stdout.txt  manifest.json  os_time.txt
results/final_focused_matrix_smoke/: final_summary.md  phase2_report.md  run_metadata.json  statistical_report.md  summary.csv  summary_by_config.csv
results/final_sold_counter_comparison/: phase2_report.md  run_metadata.json  sold_counter_comparison_summary.md  summary.csv  summary_by_config.csv
results/phase3/: phase3_two_node_soft_roce_report.md  two_node_soft_roce_summary.csv
results/phase3_soft_roce_validation/: run_metadata.json  summary.csv  summary.md
results/phase4_arbitration/: discovery_summary.csv  discovery_summary.md  phase2_report.md  sanity_check.md  summary.csv  summary_by_config.csv
results/phase4b_cleanup/: phase2_report.md  phase4b_cleanup_summary.csv  phase4b_cleanup_summary.md  summary.csv  summary_by_config.csv  verification_summary.md
results/phase5_adaptive_routing/: adaptive_routing_design.md  adaptive_smoke_summary.csv  adaptive_smoke_summary.md  calibration_summary.csv  calibration_summary.md  phase_change_summary.csv  phase_change_summary.md
results/phase5_latency_sampling/: latency_overhead_summary.csv  latency_overhead_summary.md  latency_sampler_policy.md
scripts/: parse_phase2_results.py  parse_phase3_results.py  run_final_focused_matrix.sh  run_phase2_application_experiments.sh  run_phase2_experiments.sh  run_phase2_focused_experiments.sh  run_phase3_two_node_soft_roce_validation.sh  run_phase4_arbitration_experiments.sh  run_phase4b_cleanup_experiments.sh  run_phase5_adaptive_calibration.sh  run_phase5_phase_change_approx.sh  run_sold_counter_comparison.sh
src/: backoff.cpp  backoff.h  dsm_object.cpp  dsm_object.h  hot_detection.cpp  hot_detection.h  latency_sampler.cpp  occ_engine.cpp  occ_engine.h  rdma_conn.cpp  rdma_conn.h  server_arbitration.cpp  server_arbitration.h
stat/RDMA READ latency/: output.json
stat/RDMA SEND latency/: output.json
stat/RDMA WRITE bandwidth/: output.json
stat/RDMA WRITE latency/: output.json
tests/: check_benchmark_json.py  rdsm_regression_tests.cpp
(+2304 files in other folders)
